# smp

./: CONTRIBUTING.md  LICENSE  README.md  package-lock.json  package.json  vite.config.ts
.github/workflows/: ci.yaml  release.yaml
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  log_writer.rs  logger.rs  metadata.rs  persisted_state.rs  playlist.rs  scanner.rs  settings.rs
src/components/Player/: NowPlayingInfo.tsx  PlayModeToggle.tsx  PlaybackControls.tsx  PlayerBar.tsx  PlayingTrackInfo.tsx  ProgressBar.tsx  VolumeSlider.tsx
src/components/Sidebar/: DirectoryTreePanel.tsx  PlaylistPanel.tsx  ResizeHandle.tsx
src/components/TrackList/: TagEditDialog.tsx  TrackContextMenu.tsx  TrackListHeader.tsx  TrackTable.tsx
src/components/ui/: LoadingBar.tsx  confirm-dialog.tsx  context-menu.tsx  dialog.tsx  dropdown-menu.tsx  playlist-name-dialog.tsx  scroll-area.tsx  select.tsx  slider.tsx  tooltip.tsx
src/hooks/: useAutoSave.ts  useInitialization.ts  useKeyboardShortcuts.ts  useTrayIntegration.ts
src/lib/: audio.ts  constants.ts  logger.ts  settings.ts  utils.ts
src/stores/: libraryStore.ts  playerStore.ts  playlistStore.ts  uiStore.ts
src/types/: index.ts
